created: Routes to Installation type and created InstallationTypeController and created Validation and documentation swagger
