# routes/api.php
@@ -1,8 +1,10 @@
 <?php
 
-use App\Http\Controllers\Api\ClientController;
-use App\Http\Controllers\Api\ProjectController;
-use Illuminate\Http\Request;
+use App\Http\Controllers\Api\{
+    ClientController, 
+    EquipmentController, 
+    ProjectController, 
+    InstallationTypeController};
 use Illuminate\Support\Facades\Route;
 
 //Client
@@ -11,6 +13,20 @@ Route::post('/client', [ClientController::class, 'store']);
 Route::get('/client/{id}', [ClientController::class, 'show']);
 Route::put('/client/{id}', [ClientController::class, 'update']);
 Route::delete('/client/{id}', [ClientController::class, 'destroy']);
+
+//Installation types
+Route::get('/install_type', [InstallationTypeController::class, 'index']);
+Route::post('/install_type', [InstallationTypeController::class, 'store']);
+Route::get('/install_type/{id}', [InstallationTypeController::class, 'show']);
+Route::put('/install_type/{id}', [InstallationTypeController::class, 'update']);
+Route::delete('/install_type/{id}', [InstallationTypeController::class, 'destroy']);
+
+//Equipment
+Route::get('/equipment', [EquipmentController::class, 'index']);
+Route::post('/equipment', [EquipmentController::class, 'store']);
+Route::get('/equipment/{id}', [EquipmentController::class, 'show']);
+Route::put('/equipment/{id}', [EquipmentController::class, 'update']);
+Route::delete('/equipment/{id}', [EquipmentController::class, 'destroy']);
 
 //Project
 Route::get('/projects', [ProjectController::class, 'index']);
